add topper block + update submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "retro-dog-house"]
 	path = retro-dog-house
 	url = git@github.com:g-harel/retro-dog-house.git
+[submodule "topper-block"]
+	path = topper-block
+	url = git@github.com:g-harel/topper-block.git
