--- a/plans/pretty-console/log.yaml
+++ b/plans/pretty-console/log.yaml
@@ -494,30 +494,30 @@
   }
 ]
 
-// TODO make this file yaml
-// TODO add computer shelf
-// TODO add tool wall shelving
+# TODO make this file yaml
+# TODO add computer shelf
+# TODO add tool wall shelving
 
-// TODO create plugs and plug holes in the sides
-// TODO carve out a few mm of the middle section sides for it to attach flush
-// TODO cut out cable holes from middle section
-// TODO edge band the boxes
-// TODO veneer the boxes
-// TODO final sanding of all box surfaces
-// TODO assemble the base
-// TODO add white finish to inside of boxes
-// TODO add walnut finish to outside and edges of boxes
+# TODO create plugs and plug holes in the sides
+# TODO carve out a few mm of the middle section sides for it to attach flush
+# TODO cut out cable holes from middle section
+# TODO edge band the boxes
+# TODO veneer the boxes
+# TODO final sanding of all box surfaces
+# TODO assemble the base
+# TODO add white finish to inside of boxes
+# TODO add walnut finish to outside and edges of boxes
 
-// TODO finish sizing pictographs
-// TODO size doors to fit finalized cases (care for door gaps)
-// TODO add radius to doors
-// TODO edge band doors
-// TODO veneer doors (walnut outsize, birch inside)
-// TODO final sanding of all door surfaces
-// TODO add white finish to inside of doors
-// TODO add walnut finish to outside and edges of doors
-// TODO final sanding of pictographs
-// TODO add walnut finish to pictographs (not underside)
-// TODO lay out pictographs on doors with tape
-// TODO sand finish from pictograph locations
-// TODO glue pictographs in place using setup blocks for positioning
+# TODO finish sizing pictographs
+# TODO size doors to fit finalized cases (care for door gaps)
+# TODO add radius to doors
+# TODO edge band doors
+# TODO veneer doors (walnut outsize, birch inside)
+# TODO final sanding of all door surfaces
+# TODO add white finish to inside of doors
+# TODO add walnut finish to outside and edges of doors
+# TODO final sanding of pictographs
+# TODO add walnut finish to pictographs (not underside)
+# TODO lay out pictographs on doors with tape
+# TODO sand finish from pictograph locations
+# TODO glue pictographs in place using setup blocks for positioning
