--- a/plans/pretty-console/log.yaml
+++ b/plans/pretty-console/log.yaml
@@ -491,14 +491,30 @@
       "type": "pictographs",
       "hours": 1.5
     }
+  },
+  {
+    "title": "Final Rectangle Pictographs",
+    "description": "Use a handplane to shape the rectangular pictorgraphs that are too thin to pattern route.",
+    "date": "2024-12-03",
+    "task": {
+      "type": "pictographs",
+      "hours": 1.0
+    }
+  },
+  {
+    "title": "Base plugs",
+    "description": "Cut, install, and cut 15mm plugs for domino connectors.",
+    "date": "2024-12-04",
+    "task": {
+      "type": "base",
+      "hours": 1.0
+    }
   }
 ]
 
-# TODO make this file yaml
 # TODO add computer shelf
 # TODO add tool wall shelving
 
-# TODO create plugs and plug holes in the sides
 # TODO carve out a few mm of the middle section sides for it to attach flush
 # TODO cut out cable holes from middle section
 # TODO edge band the boxes
@@ -508,7 +524,6 @@
 # TODO add white finish to inside of boxes
 # TODO add walnut finish to outside and edges of boxes
 
-# TODO finish sizing pictographs
 # TODO size doors to fit finalized cases (care for door gaps)
 # TODO add radius to doors
 # TODO edge band doors
