--- a/plans/pretty-console/log.yaml
+++ b/plans/pretty-console/log.yaml
@@ -515,8 +515,17 @@
     "description": "Add walnut edge banding to all the case fronts. Trim on a router table and sand inside edge till smooth.",
     "date": "2025-01-02",
     "task": {
-      "type": "base",
+      "type": "case",
       "hours": 2.0
+    }
+  },
+  {
+    "title": "Case Joint Relief",
+    "description": "Using routers and jigs, dish out one side of the middle case section to ensure the sections attach flush.",
+    "date": "2025-01-05",
+    "task": {
+      "type": "case",
+      "hours": 1.25
     }
   }
 ]
@@ -525,7 +534,6 @@
 
 # TODO carve out a few mm of the middle section sides for it to attach flush
 # TODO cut out cable holes from middle section
-# TODO edge band the boxes
 # TODO veneer the boxes
 # TODO final sanding of all box surfaces
 # TODO assemble the base
