--- a/plans/pretty-console/log.yaml
+++ b/plans/pretty-console/log.yaml
@@ -545,17 +545,26 @@
       "type": "case",
       "hours": 0.5
     }
+  },
+  {
+    "title": "Base Assembly",
+    "description": "Glue the sides and middle sections together into a single piece.",
+    "date": "2025-01-19",
+    "task": {
+      "type": "base",
+      "hours": 0.75
+    }
   }
 ]
 
 # TODO add computer shelf
 
 # TODO veneer the boxes
-# TODO final sanding of all box surfaces
 # TODO assemble the base
 # TODO cut down middle shelves to size
+# TODO final sanding of all box surfaces
 # TODO add white finish to inside of boxes
-# TODO add walnut finish to outside and edges of boxes
+# TODO add walnut finish to outside, base, and edges of boxes
 
 # TODO size doors to fit finalized cases (care for door gaps)
 # TODO add radius to doors
