--- a/plans/pretty-console/log.yaml
+++ b/plans/pretty-console/log.yaml
@@ -557,7 +557,7 @@
   },
   {
     "title": "Veneer Middle Section",
-    "description": "Cut down 2x 2x8' walnut veneer rolls for case sections. Use contact cement to glue veneer sheet to both sides of middle case.",
+    "description": "Cut down 2x 2x8' walnut veneer rolls for case sections. Use contact adhesive to glue veneer sheet to both sides of middle case.",
     "date": "2025-01-20",
     "task": {
       "type": "veneering",
@@ -572,13 +572,80 @@
       "type": "jig",
       "hours": 1
     }
+  },
+  {
+    "title": "Fan Cutout",
+    "description": "Cut out rectangle from the top of the middle case section to mount a fan.",
+    "date": "2025-01-24",
+    "task": {
+      "type": "case",
+      "hours": 1.0
+    }
+  },
+  {
+    "title": "Middle Shelf",
+    "description": "Cut down the middle shelf stock to 4mm less than the width and 10mm less than the depth. Then, notch the back to allow fan cables to access the power strip.",
+    "date": "2025-01-25",
+    "task": {
+      "type": "case",
+      "hours": 0.75
+    }
+  },
+  {
+    "title": "Contact Adhesive",
+    "description": "1 Quart 3M Fastbond Contact Adhesive 30NF @ 51.12",
+    "date": "2025-01-25",
+    "task": {
+      "type": "case",
+      "hours": 0
+    },
+    "expense": {
+      "retailer": "Amazon",
+      "amount": 51.12,
+      "utilization": 0.4
+    }
+  },
+  {
+    "title": "Power Strip",
+    "description": "TROND 24 Outlet Surge Protector Power Strip @ 25.99",
+    "date": "2025-01-25",
+    "task": {
+      "type": "electronics",
+      "hours": 0
+    },
+    "expense": {
+      "retailer": "Amazon",
+      "amount": 25.99,
+      "utilization": 1.0
+    }
+  },
+  {
+    "title": "Power Strip",
+    "description": "AC Infinity AIRPLATE S5 Cooling Fan System - Dual 80 @ 29.99",
+    "date": "2025-01-25",
+    "task": {
+      "type": "electronics",
+      "hours": 0
+    },
+    "expense": {
+      "retailer": "Amazon",
+      "amount": 29.99,
+      "utilization": 1.0
+    }
+  },
+  {
+    "title": "Veneer Outer Sections",
+    "description": "Use contact adhesive to glue a single veneer sheet all the way around the two outer sections.",
+    "date": "2025-01-25",
+    "task": {
+      "type": "veneering",
+      "hours": 3.0
+    }
   }
 ]
 
 # TODO add computer shelf
 
-# TODO veneer the boxes
-# TODO assemble the base
 # TODO cut down middle shelves to size
 # TODO final sanding of all box surfaces
 # TODO add white finish to inside of boxes
