--- a/plans/pretty-console/log.yaml
+++ b/plans/pretty-console/log.yaml
@@ -648,8 +648,9 @@
 
 # TODO cut down middle shelves to size
 # TODO final sanding of all box surfaces
-# TODO add white finish to inside of boxes
 # TODO add walnut finish to outside, base, and edges of boxes
+# TODO sand inside and add white finish to insides+ shelves
+# TODO cut shelf pin holes & install them
 
 # TODO size doors to fit finalized cases (care for door gaps)
 # TODO add radius to doors
