--- a/plans/pretty-console/log.yaml
+++ b/plans/pretty-console/log.yaml
@@ -641,13 +641,36 @@
       "type": "veneering",
       "hours": 3.0
     }
+  },
+  {
+    "title": "Outer Shelves",
+    "description": "Cut down the outer shelves to 4mm less than the width and 10mm less than the depth.",
+    "date": "2025-01-28",
+    "task": {
+      "type": "case",
+      "hours": 0.5
+    }
+  },
+  {
+    "title": "Wood Filler",
+    "description": "Use matching wood filler to fix any gaps in the veneer.",
+    "date": "2025-01-28",
+    "task": {
+      "type": "case",
+      "hours": 0.5
+    },
+    {
+      "title": "Final Case Sanding",
+      "description": "Sand all case parts to 120 grit.",
+      "date": "2025-01-29",
+      "task": {
+        "type": "case",
+        "hours": 1.0
+      }
+    }
   }
 ]
 
-# TODO add computer shelf
-
-# TODO cut down middle shelves to size
-# TODO final sanding of all box surfaces
 # TODO add walnut finish to outside, base, and edges of boxes
 # TODO sand inside and add white finish to insides+ shelves
 # TODO cut shelf pin holes & install them
@@ -664,3 +687,5 @@
 # TODO lay out pictographs on doors with tape
 # TODO sand finish from pictograph locations
 # TODO glue pictographs in place using setup blocks for positioning
+
+# TODO add computer shelf
