add wp bench rule + rename dovetail squares

--- a/plans/dovetail-square-mount/info.yaml
+++ b/plans/dovetail-square-mount/info.yaml
@@ -1,6 +1,6 @@
 name: "Dovetail Square Wall Mount"
-pitch: "Wall mount for the 1:7 Union Dovetail Markers & Saddle Square."
+pitch: "Wall mount for the Sterling Tool Works Dovetail Square."
 links:
-- "https://www.unionmfgco.com/products/p/union-dovetail-markers-saddle-square"
+- "https://www.heartwoodtools.com/sterlingtoolworks/sterling-dovetail-square"
 category: "prints > mounts"
 materials: ["PLA"]
