add projects + info

--- a/plans/cube-mallet-mount/info.yaml
+++ b/plans/cube-mallet-mount/info.yaml
@@ -1,5 +1,5 @@
-name: "Cabinet Maker's Scraper Wall Mount"
-pitch: "Wall mount for the Lie-Nielsen No. 85 Cabinet Maker's Scraper."
+name: "Cube Mallet Mount"
+pitch: "Wall mount for the MW Machine Co. Chisel Mallet"
 inProgress: true
 hidden: true
 links:
