--- a/plans/entry-bench/log.yaml
+++ b/plans/entry-bench/log.yaml
@@ -13,3 +13,15 @@
   date: "2025-11-08"
   task:
     hours: 1.0
+
+- title: "Template Cutting"
+  description: "Cut out templates from 1/2\" MDF."
+  date: "2025-12-01"
+  task:
+    hours: 1.0
+
+- title: "Template Copying part 1/2"
+  description: "Use the quadrant templates to duplicate them three more times on more 1/2\" MDF. Remember to use a center punch to mark the leg holes in the seat quadrants."
+  date: "2025-12-02"
+  task:
+    hours: 1.0
